[package]
name = "coffee-grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "./src/lib.rs"

[[bin]]
name="server"
path="./src/server.rs"

[[bin]]
name="client"
path="./src/client.rs"

[dependencies]
tonic = "0.6"
prost = "0.9"
tonic-reflection = "0.3.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

# communication with kafka
rdkafka = "0.28.0"

#log
log = "0.4.14"

serde = "1.0.130"
serde_json = "1.0.67"
dotenv = "0.15.0"
envy = "0.4.2"

[build-dependencies]
tonic-build = "0.6"
#prost-build = "0.9.0"